--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <meta http-equiv="Cache-control" content="public">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Copia Li">
+	
+	<!--[if lt IE 9]>
+        <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
     <!-- Stylesheets -->
     <link rel="stylesheet" href="css/app.min.css" type="text/css" />
 
